Remove loss weights in make, make functional

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -198,20 +198,11 @@
    "source": [
     "import torch.nn.functional as F\n",
     "\n",
-    "f_recon        = 4.\n",
-    "f_J_eye \t   = 1.\n",
-    "\n",
-    "f_diag         = 1. \n",
-    "f_off_diag     = 1. \n",
-    "\n",
-    "f_input        = 1.\n",
-    "f_input_jac    = 1.\n",
-    "f_theta        = 1.\n",
-    "#f_inertia_eye  = 0. \n",
     "\n",
     "\n",
     "\n",
-    "def loss_fun(q, theta, q_hat, M_q, A_q, J_h_enc, J_h_dec):\n",
+    "\n",
+    "def loss_fun(q, theta, q_hat, M_q, A_q, J_h_enc, J_h_dec, loss_weights):\n",
     "\n",
     "\t\"\"\"\n",
     "\tLoss function for training the Autoencoder. Loss terms are the following:\n",
@@ -222,6 +213,10 @@
     "\tl_input:    Loss to drive input matrix in theta-space to [1, 0]^T (MSE)\n",
     "\n",
     "\t\"\"\"\n",
+    "\n",
+    "\n",
+    "\tlw = loss_weights\n",
+    "\t\n",
     "\n",
     "\tl_recon = F.mse_loss(q, q_hat, reduction=\"mean\")\n",
     "\n",
@@ -256,10 +251,10 @@
     "\tl_input = torch.mean((A_th[:, 1]**2))\n",
     "\t\n",
     "\t\n",
-    "\tloss_terms = torch.tensor([l_recon * f_recon, l_diag * f_diag, l_off_diag * f_off_diag, \n",
-    "\t\t\t\t\t\t\t   l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta, l_J_eye * f_J_eye])\n",
-    "\tloss_sum = l_recon * f_recon + l_diag * f_diag + l_off_diag * f_off_diag + l_input * f_input + \\\n",
-    "\t\t\t   l_input_jac * f_input_jac + l_theta * f_theta + l_J_eye * f_J_eye\n",
+    "\tloss_terms = torch.tensor([l_recon * lw[\"w_recon\"], l_diag * lw[\"w_diag\"], l_off_diag * lw[\"w_off_diag\"], \n",
+    "\t\t\t\t\t\t\t   l_input * lw[\"w_input\"], l_input_jac * lw[\"w_input_jac\"], l_theta * lw[\"w_theta\"], l_J_eye * lw[\"w_J_eye\"]])\n",
+    "\tloss_sum = l_recon * lw[\"w_recon\"] + l_diag * lw[\"w_diag\"] + l_off_diag * lw[\"w_off_diag\"] + l_input * lw[\"w_input\"] + \\\n",
+    "\t\t\t   l_input_jac * lw[\"w_input_jac\"] + l_theta * lw[\"w_theta\"] + l_J_eye * lw[\"w_J_eye\"]\n",
     "\n",
     "\treturn loss_sum, loss_terms"
    ]
@@ -304,23 +299,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_metadata(q0_split, lr, num_epochs, nn_filename, model, file_counter, dir_path):\n",
+    "def make_metadata(q0_split, lr, num_epochs, nn_filename, model, file_counter, dir_path, loss_weights):\n",
     "\t\n",
     "\tmetadata = {\"q0_low\" : q0_split[0],\n",
     "\t\t\t\t\"q0_high\" : q0_split[1],\n",
     "\t\t\t\t\"lr\" : lr,\n",
     "\t\t\t\t\"epochs\" : num_epochs,\n",
     "\t\t\t\t\"file_name\" : nn_filename,\n",
-    "\t\t\t\t\"loss_weights\": {\n",
-    "\t\t\t\t\t\"f_recon\": f_recon,\n",
-    "\t\t\t\t\t\"f_diag\": f_diag,\n",
-    "\t\t\t\t\t\"f_off_diag\": f_off_diag,\n",
-    "\t\t\t\t\t\"f_input\": f_input,\n",
-    "\t\t\t\t\t\"f_input_jac\": f_input_jac,\n",
-    "\t\t\t\t\t\"f_theta\": f_theta,\n",
-    "\t\t\t\t\t#\"f_inertia_eye\": f_inertia_eye,\n",
-    "\t\t\t\t\t\"f_J_eye\": f_J_eye\n",
-    "\t\t\t\t}}\n",
+    "\t\t\t\t\"loss_weights\": loss_weights\n",
+    "\t\t\t\t}\n",
     "\tmetadata[\"architecture\"] = {\n",
     "\t\t\"encoder\": autoencoders.summarize_sequential(model.enc),\n",
     "\t\t\"decoder\": autoencoders.summarize_sequential(model.dec)\n",
@@ -339,7 +326,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_AE_model(rp, device, lr, num_epochs, q0_split, train_dataloader, val_dataloader, current_time, dir_name = None):\n",
+    "def train_AE_model(rp, device, lr, num_epochs, q0_split, train_dataloader, val_dataloader, current_time, \n",
+    "\t\t\t\t   loss_weights, load_dir_name = None, save_dir_name = None):\n",
     "\n",
     "\t\"\"\"\n",
     "\tExecutes training loop for autoencoder\n",
@@ -357,7 +345,7 @@
     "\n",
     "\n",
     "\n",
-    "\tmake_metadata(q0_split, lr, num_epochs, nn_filename, model, file_counter, dir_path)\n",
+    "\tmake_metadata(q0_split, lr, num_epochs, nn_filename, model, file_counter, dir_path, loss_weights)\n",
     "\n",
     "\ttrain_losses = []\n",
     "\tval_losses = []\n",
@@ -379,7 +367,7 @@
     "\t\t\ttheta, J_h, q_hat, J_h_dec, J_h_ana = model.forward(q)  \n",
     "\t\t\ttheta_ana = model.theta_ana(q)\n",
     "\t\t\t\t\t\n",
-    "\t\t\tloss, loss_terms = loss_fun(q, theta, q_hat, M_q, A_q, J_h, J_h_dec)\n",
+    "\t\t\tloss, loss_terms = loss_fun(q, theta, q_hat, M_q, A_q, J_h, J_h_dec, loss_weights)\n",
     "\t\t\t\n",
     "\t\t\toptimizer.zero_grad()\n",
     "\t\t\tloss.backward()\n",
@@ -406,7 +394,7 @@
     "\t\t\t\ttheta, J_h, q_hat, J_h_dec, J_h_ana = model.forward(q)\n",
     "\t\t\t\ttheta_ana = model.theta_ana(q)\n",
     "\n",
-    "\t\t\t\tloss, loss_terms = loss_fun(q, theta, q_hat, M_q, A_q, J_h, J_h_dec)\n",
+    "\t\t\t\tloss, loss_terms = loss_fun(q, theta, q_hat, M_q, A_q, J_h, J_h_dec, loss_weights)\n",
     "\n",
     "\t\t\t\tval_loss += loss.item() * batch_size\n",
     "\t\t\t\tval_loss_terms += loss_terms * batch_size\n",
@@ -593,9 +581,23 @@
     "\t\t\t\t\t\t\t\t\t\t [r\"$M_{\\theta_{0,0}}$\", r\"$M_{\\theta_{0,1}}$\", r\"$M_{\\theta_{1,0}}$\", r\"$M_{\\theta_{1,1}}$\"], r\"$q_{0}$\", r\"$q_{1}$\", \"M_th\", folder_path)\n",
     "\t\t\t\t\n",
     "\t\t\t\n",
+    "w_diag         = 1. \n",
+    "w_off_diag     = 1. \n",
     "\n",
+    "w_input        = 1.\n",
+    "w_input_jac    = 1.\n",
+    "w_theta        = 1.\n",
+    "#f_inertia_eye  = 0. \n",
     "\n",
-    "\t\t"
+    "loss_weights = {\n",
+    "\t\"w_recon\": w_recon,\n",
+    "\t\"w_J_eye\": w_J_eye,\n",
+    "\t\"w_diag\": w_diag,\n",
+    "\t\"w_off_diag\": w_off_diag,\n",
+    "\t\"w_input\": w_input,\n",
+    "\t\"w_input_jac\": w_input_jac,\n",
+    "\t\"w_theta\": w_theta\n",
+    "}"
    ]
   },
   {
@@ -627,7 +629,7 @@
     "(train_dataloader, val_dataloader) = make_dataloaders(dataset=dataset, batch_size=batch_size, train_part=train_part)\n",
     "outputs = []\n",
     "model, train_losses, val_losses, dir_path, nn_filepath, file_counter = train_AE_model(rp, device, lr, num_epochs, q0_split, train_dataloader, \n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t\tval_dataloader, current_time, existing_model_name)"
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\tval_dataloader, current_time, loss_weights, existing_model_name, save_dir_name)"
    ]
   },
   {
