Different save path definition

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -333,14 +333,17 @@
     "\tExecutes training loop for autoencoder\n",
     "\t\"\"\"\n",
     "\n",
-    "\tmodel, file_counter, dir_name = load_model(current_time, num_epochs, lr, dir_name)\n",
+    "\tmodel, file_counter, alt_dir_name = load_model(current_time, num_epochs, lr, load_dir_name)\n",
+    "\n",
+    "\tif save_dir_name is None:\n",
+    "\t\tsave_dir_name = alt_dir_name\n",
     "\n",
     "\toptimizer = torch.optim.Adam(model.parameters(), lr=lr)#,  weight_decay=1e-6)\n",
     "\tscheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.5 ** (1 / num_epochs))\n",
     "\t \n",
-    "\tdir_path = os.path.join(os.getcwd(), \"Models\", dir_name)\n",
+    "\tdir_path = os.path.join(os.getcwd(), \"Models\", save_dir_name)\n",
     "\tos.makedirs(dir_path, exist_ok=True)\n",
-    "\tnn_filename = dir_name + \"_\" + str(file_counter) + \".pth\"\n",
+    "\tnn_filename = \"NN_\" + str(file_counter) + \".pth\"\n",
     "\tnn_filepath = os.path.join(dir_path, nn_filename)\n",
     "\n",
     "\n",
