print fewer training outputs

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -410,14 +410,12 @@
     "\n",
     "\t\t\n",
     "\t\ttlt = train_loss_terms\n",
-    "\t\tprint(\n",
-    "\t\t\tf'Epoch [{epoch + 1}/{num_epochs}], Training Loss: {train_loss:.4f}, Validation Loss: {val_loss:.4f}, Duration: {epoch_duration:.2f} seconds')\n",
-    "\t\tprint(\n",
-    "\t\t\tf'l_recon: {tlt[0]:.4f}, l_diag: {tlt[1]:.4f}, l_off_diag: {tlt[2]:.4f}, l_input: {tlt[3]:.4f}, l_input_jac: {tlt[4]:.4f}, l_theta: {tlt[5]:.4f}, l_J_eye: {tlt[6]:.4f}'\n",
+    "\t\tif epoch % 50 == 0:\n",
+    "\t\t\tprint(\n",
+    "\t\t\t\tf'Epoch [{epoch + 1}/{num_epochs}], Training Loss: {train_loss:.4f}, Validation Loss: {val_loss:.4f}, Duration: {epoch_duration:.2f} seconds')\n",
+    "\t\t\tprint(\n",
+    "\t\t\t\tf'l_recon: {tlt[0]:.4f}, l_diag: {tlt[1]:.4f}, l_off_diag: {tlt[2]:.4f}, l_input: {tlt[3]:.4f}, l_input_jac: {tlt[4]:.4f}, l_theta: {tlt[5]:.4f}, l_J_eye: {tlt[6]:.4f}'\n",
     "\t\t)\n",
-    "\t\t#print(\n",
-    "\t\t#\tf'l_recon: {tlt[0]:.4f}, l_inertia: {tlt[1]:.4f}, l_input: {tlt[2]:.4f}, l_input_jac: {tlt[3]:.4f}, l_theta: {tlt[4]:.4f}'\n",
-    "\t\t#)\n",
     "\t\t\n",
     "\treturn(model, train_losses, val_losses, dir_path, nn_filepath, file_counter)\n"
    ]
