--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -476,7 +476,7 @@
     "\t}\n",
     "\t\n",
     "\ttorch.save(losses_dict, save_loss_path)\n",
-    "\tprint(\"Saved losses to {save_loss_path}\")"
+    "\tprint(f\"Saved losses to {save_loss_path}\")"
    ]
   },
   {
