--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -487,8 +487,8 @@
    "outputs": [],
    "source": [
     "def load_loss(load_loss_path):\n",
-    "    losses_dict = torch.load(load_loss_path, map_location = \"cpu\")\n",
-    "    return losses_dict[\"train\"], losses_dict[\"val\"]"
+    "\tlosses_dict = torch.load(load_loss_path, map_location = \"cpu\")\n",
+    "\treturn losses_dict[\"train\"], losses_dict[\"val\"]"
    ]
   },
   {
@@ -526,7 +526,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_model_performance(model, plot_dataloader, folder_path):\n",
+    "w_recon        = 4.\n",
+    "w_J_eye \t   = 1.\n",
     "\n",
     "\tmodel_ana = autoencoders.Analytic_transformer(rp)\n",
     "\n",
