change training an plotting for tests

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -559,13 +559,14 @@
     "batch_size = 512\n",
     "train_part = 0.7\n",
     "\n",
-    "num_epochs = 3001\n",
+    "num_epochs = 101\n",
     "lr = 1e-3\n",
     "\n",
     "# IMPORTANT:\n",
     "# If you want to train on an existing model\n",
     "#existing_model_name = \"NN_202505131531\"\n",
     "existing_model_name = None\n",
+    "save_dir_name = None\n",
     "\n",
     "plt.ion()\n",
     "\n",
@@ -600,9 +601,9 @@
    "outputs": [],
    "source": [
     "points_path = os.path.join(dir_path, \"training_points_\" + str(file_counter) + \".png\")\n",
-    "points_plotter(shifted_points, save = True, file_path = points_path)\n",
-    "scatter_fig_path = os.path.join(dir_path, \"loss_\" + str(file_counter) + \".png\")\n",
-    "plot_loss(train_losses, val_losses, log = True, save = True, file_path = scatter_fig_path)"
+    "lp.points_plotter(shifted_points, save = True, file_path = points_path)\n",
+    "loss_fig_path = os.path.join(dir_path, \"loss_\" + str(file_counter) + \".png\")\n",
+    "lp.plot_loss(train_losses, val_losses, log = True, file_path = loss_fig_path)"
    ]
   },
   {
@@ -639,7 +640,7 @@
     "theta_figure_path = os.path.join(dir_path, \"theta_mapping_\" + str(file_counter) + \".png\")\n",
     "th_plotter.make_figure(theta_figure_path)\n",
     "theta_anim_path = os.path.join(dir_path, \"theta_mapping_\" + str(file_counter) + \".mp4\")\n",
-    "#th_plotter.make_animation(theta_anim_path, duration = 4, fps = 20)"
+    "th_plotter.make_animation(theta_anim_path, duration = 4, fps = 20)"
    ]
   },
   {
