Calculate trained model performance, as function

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -658,30 +658,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_points = mask_points(q0_split)\n",
-    "test_dataset = make_dataset(test_points)\n",
-    "test_dataloader = make_plot_dataloader(test_dataset, stride=10)\n",
+    "def calc_model_performance(model):\n",
     "\n",
-    "with torch.no_grad():\n",
-    "\tfor (q_test, M_q_test, A_q_test) in test_dataloader:\n",
-    "\t\tq_test = q_test.to(device)\n",
-    "\t\tM_q_test = M_q_test.to(device)\n",
-    "\t\tA_q_test = A_q_test.to(device)\n",
+    "\ttest_points = mask_points(q0_split)\n",
+    "\ttest_dataset = make_dataset(test_points)\n",
+    "\ttest_dataloader = make_plot_dataloader(test_dataset, stride=10)\n",
     "\n",
-    "\t\ttheta_test, J_h_test, q_hat_test, J_h_dec_test, J_h_ana_test = model(q_test)\n",
-    "\t\ttheta_ana_test = model.theta_ana(q_test)\n",
-    "\t\tJ_h_trans_test = torch.transpose(J_h_test, 1, 2)\n",
-    "\t\tJ_h_inv_test = J_h_dec_test\n",
-    "\t\tJ_h_inv_trans_test = torch.transpose(J_h_inv_test, 1, 2)\n",
+    "\twith torch.no_grad():\n",
+    "\t\tfor (q_test, M_q_test, A_q_test) in test_dataloader:\n",
+    "\t\t\tq_test = q_test.to(device)\n",
+    "\t\t\tM_q_test = M_q_test.to(device)\n",
+    "\t\t\tA_q_test = A_q_test.to(device)\n",
     "\n",
-    "\t\tJ_h_inv_ana_test = torch.linalg.inv(J_h_ana_test)\n",
-    "\t\tJ_h_inv_trans_ana_test = torch.transpose(J_h_inv_ana_test, 1, 2)\n",
+    "\t\t\ttheta_test, J_h_test, q_hat_test, J_h_dec_test, J_h_ana_test = model(q_test)\n",
+    "\t\t\ttheta_ana_test = model.theta_ana(q_test)\n",
+    "\t\t\tJ_h_trans_test = torch.transpose(J_h_test, 1, 2)\n",
+    "\t\t\tJ_h_inv_test = J_h_dec_test\n",
+    "\t\t\tJ_h_inv_trans_test = torch.transpose(J_h_inv_test, 1, 2)\n",
     "\n",
-    "\t\tM_th_test = J_h_inv_trans_test @ M_q_test @ J_h_inv_test\n",
-    "\t\tA_th_test = (J_h_inv_trans_test @ A_q_test).squeeze(-1)\n",
+    "\t\t\tJ_h_inv_ana_test = torch.linalg.inv(J_h_ana_test)\n",
+    "\t\t\tJ_h_inv_trans_ana_test = torch.transpose(J_h_inv_ana_test, 1, 2)\n",
     "\n",
-    "\t\tM_th_ana_test = J_h_inv_trans_ana_test @ M_q_test @ J_h_inv_ana_test\n",
-    "\t\tA_th_ana_test = (J_h_inv_trans_ana_test @ A_q_test).squeeze(-1)\n"
+    "\t\t\tM_th_test = J_h_inv_trans_test @ M_q_test @ J_h_inv_test\n",
+    "\t\t\tA_th_test = (J_h_inv_trans_test @ A_q_test).squeeze(-1)\n",
+    "\n",
+    "\t\t\tM_th_ana_test = J_h_inv_trans_ana_test @ M_q_test @ J_h_inv_ana_test\n",
+    "\t\t\tA_th_ana_test = (J_h_inv_trans_ana_test @ A_q_test).squeeze(-1)\n",
+    "\n",
+    "\tmse_A_th = F.mse_loss(A_th_test, A_th_ana_test)\n",
+    "\tdiag_values_test = torch.diagonal(M_th_test, dim1=1, dim2=2)\n",
+    "\tmse_M_th_dia = torch.mean((-1 + torch.exp(-(diag_values_test - 1))) * (diag_values_test < 1).float())\n",
+    "\tmse_M_th_off_dia = F.mse_loss(M_th_test[:, 0, 1], torch.tensor(0.).repeat(M_th_test.size(0)).to(device))\n",
+    "\tmse_M_th = mse_M_th_dia + mse_M_th_off_dia\n",
+    "\tmse_recon = F.mse_loss(q_hat_test, q_test)\n",
+    "\tmse_J_eye = F.mse_loss(J_h_test @ J_h_dec_test, torch.eye(2).repeat(J_h_test.size(0), 1, 1).to(device))\n",
+    "\tprint(\"MSE A_th  loss:\", mse_A_th.item())\n",
+    "\tprint(\"MSE M_th  loss:\", mse_M_th.item())\n",
+    "\tprint(\"MSE recon loss:\", mse_recon.item())\n",
+    "\tprint(\"MSE J_eye loss:\", mse_J_eye.item())\n",
+    "\tmse_total = mse_A_th + mse_M_th + mse_recon + mse_J_eye\n",
+    "\tprint(\"MSE total loss:\", mse_total.item())\n",
+    "\n",
+    "\treturn mse_A_th, mse_M_th_dia, mse_M_th_off_dia, mse_recon, mse_J_eye, mse_total\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce8e2df7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
