Train many models, log their performance

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -719,19 +719,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mse_A_th = F.mse_loss(A_th_test, A_th_ana_test)\n",
-    "diag_values_test = torch.diagonal(M_th_test, dim1=1, dim2=2)\n",
-    "mse_M_th_dia = torch.mean((-1 + torch.exp(-(diag_values_test - 1))) * (diag_values_test < 1).float())\n",
-    "mse_M_th_off_dia = F.mse_loss(M_th_test[:, 0, 1], torch.tensor(0.).repeat(M_th_test.size(0)).to(device))\n",
-    "mse_M_th = mse_M_th_dia + mse_M_th_off_dia\n",
-    "mse_recon = F.mse_loss(q_hat_test, q_test)\n",
-    "mse_J_eye = F.mse_loss(J_h_test @ J_h_dec_test, torch.eye(2).repeat(J_h_test.size(0), 1, 1).to(device))\n",
-    "print(\"MSE A_th  loss:\", mse_A_th.item())\n",
-    "print(\"MSE M_th  loss:\", mse_M_th.item())\n",
-    "print(\"MSE recon loss:\", mse_recon.item())\n",
-    "print(\"MSE J_eye loss:\", mse_J_eye.item())\n",
-    "mse_total = mse_A_th + mse_M_th + mse_recon + mse_J_eye\n",
-    "print(\"MSE total loss:\", mse_total.item())"
+    "q0_split = (-torch.pi, 0.)\n",
+    "batch_size = 512\n",
+    "train_part = 0.7\n",
+    "\n",
+    "num_epochs = 3001\n",
+    "lr = 1e-3\n",
+    "\n",
+    "existing_model_name = None\n",
+    "\n",
+    "shifted_points = mask_points(q0_split, clockwise=train_clockwise)\n",
+    "\n",
+    "dataset = make_dataset(shifted_points)\n",
+    "train_dataloader, val_dataloader = make_dataloaders(dataset=dataset, batch_size=batch_size, train_part=train_part)\n",
+    "\n",
+    "mse_file_path = \"Models/Weight_Comparisons/Model_losses.json\"\n",
+    "\n",
+    "# Step 1: Load existing data if the file exists\n",
+    "if os.path.exists(mse_file_path):\n",
+    "    with open(mse_file_path, \"r\") as f:\n",
+    "        mse_dict = json.load(f)\n",
+    "else:\n",
+    "    mse_dict = {}\n",
+    "\n",
+    "for i in range(len(loss_weights)):\n",
+    "\tfor j in [0.25, 1., 4.]:\n",
+    "\t\tloss_weights_loop = loss_weights.copy()\n",
+    "\t\tweights_key = list(loss_weights.keys())[i]\n",
+    "\t\tloss_weights_loop[weights_key] = j\n",
+    "\t\t\n",
+    "\n",
+    "\t\tplt.ion()\n",
+    "\t\tcurrent_time = datetime.now().strftime(\"%Y%m%d%H%M\")\n",
+    "\t\tsave_dir_name = \"Weight_Comparisons/NN_[\" + str(i) + \"] = \" + str(j)\n",
+    "\t\tprint(save_dir_name)\n",
+    "\n",
+    "\t\tmodel, train_losses, val_losses, dir_path, nn_filepath, file_counter = train_AE_model(rp, device, lr, num_epochs, q0_split, train_dataloader, \n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tval_dataloader, current_time, loss_weights, existing_model_name, save_dir_name)\n",
+    "\t\tsave_model(model, nn_filepath)\n",
+    "\t\tmse_A_th, mse_M_th_dia, mse_M_th_off_dia, mse_recon, mse_J_eye, mse_total = calc_model_performance(model)\n",
+    "\n",
+    "\t\tmse_dict_small = {\n",
+    "\t\t\t\"mse_A_th\": mse_A_th.item(),\n",
+    "\t\t\t\"mse_M_th_dia\": mse_M_th_dia.item(),\n",
+    "\t\t\t\"mse_M_th_off_dia\": mse_M_th_off_dia.item(),\n",
+    "\t\t\t\"mse_recon\": mse_recon.item(),\n",
+    "\t\t\t\"mse_J_eye\": mse_J_eye.item(),\n",
+    "\t\t\t\"mse_total\": mse_total.item()\n",
+    "\t\t}\n",
+    "\n",
+    "\t\tmse_dict_big_name = \"loss item \" + str(i) + \", value \" + str(j)\n",
+    "\t\tmse_dict[mse_dict_big_name] = mse_dict_small\n",
+    "\n",
+    "\t\twith open(mse_file_path, \"w\") as f:\n",
+    "\t\t\tjson.dump(mse_dict, f, indent=4)\n",
+    "\n",
+    "\t\tnotify()\n",
+    "        os.system('paplay /usr/share/sounds/freedesktop/stereo/complete.oga')\n",
+    "\t\t"
    ]
   },
   {
