change plotting slightly

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -802,7 +802,7 @@
     "plot_points = mask_points(q0_split, clockwise = train_clockwise)\n",
     "plot_dataset = make_dataset(plot_points)\n",
     "plot_dataloader = make_plot_dataloader(plot_dataset, stride = 1)\n",
-    "plot_model_performance(model, plot_dataloader, folder_path)\n"
+    "lp.plot_model_performance(model, plot_dataloader, folder_path)\n"
    ]
   },
   {
