--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -844,12 +844,114 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9712dd2",
+   "metadata": {},
+   "source": [
+    "#### Plot losses for mutiple simulation runs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d20799b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_paths = [\n",
+    "\t\"Models/NN_202505221832/losses.pt\",\n",
+    "\t\"Models/NN_202505221839/losses.pt\",\n",
+    "\t\"Models/NN_202505221919/losses.pt\"\n",
+    "]\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['font.family']   = 'serif'\n",
+    "matplotlib.rcParams['font.serif']    = ['Times New Roman']\n",
+    "matplotlib.rcParams['mathtext.fontset'] = 'dejavuserif'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4a96d87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_losses_vs_epoch(loss_paths):\n",
+    "\t\"\"\"\n",
+    "\tPlot training & validation losses over epochs for multiple runs.\n",
+    "\t\n",
+    "\t- Semi-transparent thin lines for each individual run\n",
+    "\t- Bold line = mean across runs\n",
+    "\t- Shaded band = ±1 standard deviation\n",
+    "\t\"\"\"\n",
+    "\tall_train = []\n",
+    "\tall_val   = []\n",
+    "\t\n",
+    "\t# Load all losses\n",
+    "\tfor loss_path in loss_paths:\n",
+    "\t\ttrain_losses, val_losses = load_loss(loss_path)\n",
+    "\t\tall_train.append(train_losses)\n",
+    "\t\tall_val.append(val_losses)\n",
+    "\t\n",
+    "\t# Assume every run has the same number of epochs\n",
+    "\tepochs = np.arange(0, len(all_train[0]))\n",
+    "\tall_train = np.vstack(all_train)  # shape = (n_runs, n_epochs)\n",
+    "\tall_val   = np.vstack(all_val)\n",
+    "\t\n",
+    "\t# Compute mean & std\n",
+    "\tmean_train = all_train.mean(axis=0)\n",
+    "\tstd_train  = all_train.std(axis=0)\n",
+    "\tmean_val   = all_val.mean(axis=0)\n",
+    "\tstd_val    = all_val.std(axis=0)\n",
+    "\t\n",
+    "\tplt.figure(figsize=(8, 6))\n",
+    "\t\n",
+    "\t# Plot each individual run (train & val) with low alpha\n",
+    "\tfor i in range(all_train.shape[0]):\n",
+    "\t\tplt.plot(epochs, all_train[i], color='C0', alpha=0.3, linewidth=1)\n",
+    "\t\tplt.plot(epochs, all_val[i],   color='C1', alpha=0.3, linewidth=1, linestyle='--')\n",
+    "\t\n",
+    "\t# Plot mean ± std shading\n",
+    "\tplt.plot(epochs, mean_train, color='C0', label='Train mean', linewidth=2)\n",
+    "\tplt.fill_between(epochs,\n",
+    "\t\t\t\t\t mean_train - std_train,\n",
+    "\t\t\t\t\t mean_train + std_train,\n",
+    "\t\t\t\t\t color='C0', alpha=0.2,\n",
+    "\t\t\t\t\t label='Train ±1σ')\n",
+    "\n",
+    "\tplt.plot(epochs, mean_val, color='C1', label='Val mean', linewidth=2, linestyle='--')\n",
+    "\tplt.fill_between(epochs,\n",
+    "\t\t\t\t\t mean_val - std_val,\n",
+    "\t\t\t\t\t mean_val + std_val,\n",
+    "\t\t\t\t\t color='C1', alpha=0.2,\n",
+    "\t\t\t\t\t label='Val ±1σ')\n",
+    "\t\n",
+    "\tplt.xlabel('Epoch')\n",
+    "\tplt.ylabel('Loss')\n",
+    "\tplt.title('Training & Validation Loss Across Runs')\n",
+    "\tplt.grid(True)\n",
+    "\tplt.legend()\n",
+    "\tplt.yscale(\"log\")\n",
+    "\tplt.tight_layout()\n",
+    "\tplt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c33b4c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_losses_vs_epoch(loss_paths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "844653fa",
    "metadata": {},
    "outputs": [],
    "source": []
