Remove old naive controller, add ana controller

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -478,175 +478,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analytic simulation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sim_naive(Kp_naive, Kd_naive):\n",
+    "timestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
     "\n",
-    "\tq_naive_series, q_d_naive_series, q_dd_naive_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "\tth_naive_series, th_d_naive_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "\tu_naive_series = torch.empty((0,1)).to(device)\n",
-    "\n",
-    "\tdt = 0.01\n",
-    "\tt_end = 3\n",
-    "\tt_series = torch.arange(0, 15, 0.01)\n",
-    "\n",
-    "\tq_naive, q_d_naive, q_dd_naive = q_start, q_d_start, q_dd_start\n",
-    "\n",
-    "\tis_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
-    "\n",
-    "\tfor t in torch.arange(0, t_end, dt):\n",
-    "\t\tprint(\"Time:\", t.item().__round__(3))\n",
-    "\n",
-    "\t\t\n",
-    "\t\tq = q_naive\n",
-    "\t\tq_d = q_d_naive\n",
-    "\n",
-    "\t\tM_q, C_q, G_q = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
-    "\t\tA_q = dynamics.input_matrix(rp, q.squeeze(0))\n",
+    "th_ana_series, th_d_ana_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "q_ana_series, q_d_ana_series, q_dd_ana_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "u_ana_series = torch.empty((0,1)).to(device)\n",
+    "tau_q_ana_series = torch.empty((0,2)).to(device)\n",
     "\n",
     "\n",
-    "\t\tu = torch.pinverse(A_q) @ ((Kp_naive @ (q_des - q).T + Kd_naive @ (q_d_des - q_d).T))     \n",
-    "\t\tu = u + torch.pinverse(A_q) @ G_q\n",
+    "dt = 0.01\n",
+    "t_end = 15\n",
+    "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
-    "\t\ttau_q = A_q * u\n",
+    "th = th_start_ana\n",
+    "th_d = th_d_start_ana\n",
     "\n",
-    "\t\tq_dd_naive = (torch.pinverse(M_q) @ (tau_q - C_q @ ((q_d).T) - G_q)).T \n",
-    "\t\tq_d_naive = q_d_naive + q_dd_naive * dt\n",
-    "\t\tq_naive = q_naive + q_d_naive * dt\n",
-    "\t\tq_naive = transforms.wrap_to_pi(q_naive)\n",
     "\n",
-    "\t\tth_naive = transforms.analytic_theta(rp, q_naive.squeeze(0))\n",
-    "\t\t#theta_partial = partial(transforms.analytic_theta, rp)\n",
-    "\t\t#jacobian_fn = torch.func.jacfwd(theta_partial, has_aux=False)\n",
-    "\t\t#J_naive = jacobian_fn(q_naive.squeeze(0)).float()\n",
-    "\t\t#th_d_naive = (J_naive @ q_d_naive.T).T\n",
+    "q_ana, q_d_ana, q_dd_ana = q_start, q_d_start, q_dd_start\n",
     "\n",
-    "\t\t\"\"\" Store data for plotting \"\"\"\n",
+    "is_clockwise = False\n",
+    "\n",
+    "model = autoencoders.Analytic_transformer(rp)\n",
+    "\n",
+    "for t in torch.arange(0, t_end, dt):\n",
+    "\tt_string = \"Time: [\" + str(t.item().__round__(3)) + \"/\" + str(t_end) + \".0]\"\n",
+    "\tprint(t_string)\n",
+    "\n",
+    "\n",
+    "\tq_ana\n",
+    "\tq_d_ana\n",
+    "\n",
+    "\tth_ana = model.encoder_vmap(q_ana)\n",
+    "\tth_d_ana = (model.jacobian_enc(q_ana) @ q_d_ana.T).T\n",
     "\t\n",
-    "\t\tu_naive_series = torch.cat((u_naive_series, u.detach()), dim=0)\n",
-    "\t\tq_naive_series = torch.cat((q_naive_series, q_naive.detach()), dim=0)\n",
-    "\t\tq_d_naive_series = torch.cat((q_d_naive_series, q_d_naive.detach()), dim=0)\n",
-    "\t\tq_dd_naive_series = torch.cat((q_dd_naive_series, q_dd_naive.detach()), dim=0)\n",
-    "\t\t\n",
-    "\t\tth_naive_series = torch.cat((th_naive_series, th_naive.unsqueeze(0).detach()), dim=0)\n",
-    "\t\t#th_d_naive_series = torch.cat((th_d_naive_series, th_d_naive.detach()), dim=0)\n",
+    "\tq_hat_ana = model.decoder_vmap(th_ana, clockwise=model_cw)\n",
+    "\tq_d_hat_ana = (model.jacobian_dec(th_ana) @ th_d_ana.T).T\n",
+    "\n",
+    "\t\"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
     "\t\n",
-    "\treturn((q_naive_series, q_d_naive_series, q_dd_naive_series, th_naive_series, th_d_naive_series, u_naive_series), dt, t_end)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def naive_to_xy(q_naive_series):\n",
-    "\txy_naive_series = torch.empty((0,2)).to(device)\n",
+    "\tJ_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
+    "\tJ_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
     "\n",
-    "\t#for q_real, q_est, q_naive in zip(q_real_series, q_est_series, q_naive_series):\n",
-    "\tfor q_naive in q_naive_series:\n",
-    "\t\txy_naive, _ = transforms.forward_kinematics(rp, q_naive.squeeze(0))\n",
-    "\t\txy_naive_series = torch.cat((xy_naive_series, xy_naive.unsqueeze(0)))\n",
+    "\tM_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q_hat_ana.squeeze(0), q_d_hat_ana.squeeze(0))\n",
+    "\tA_q_est = dynamics.input_matrix(rp, q_hat_ana.squeeze(0))\n",
     "\n",
-    "\treturn (xy_naive_series)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_naive(Kp_naive, Kd_naive, q_naive_series, th_naive_series, xy_naive_series, u_naive_series, dt, t_end):\n",
     "\n",
-    "\tdatasets_q = [\n",
-    "\t\t{\n",
-    "\t\t\t\"name\": \"naive\",\n",
-    "\t\t\t\"values\": q_naive_series.cpu().detach().numpy(),\n",
-    "\t\t\t\"color\": \"tab:green\"\n",
-    "\t\t}\n",
-    "\t]\n",
-    "\tdatasets_th = [\n",
-    "\t\t{\n",
-    "\t\t\t\"name\": \"naive\",\n",
-    "\t\t\t\"values\": th_naive_series.cpu().detach().numpy(),\n",
-    "\t\t\t\"color\": \"tab:orange\"\n",
-    "\t\t}\n",
-    "\t]\n",
+    "\t\"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
     "\n",
-    "\tdatasets_xy = [\n",
-    "\t\t{\n",
-    "\t\t\t\"name\": \"naive\",\n",
-    "\t\t\t\"values\": xy_naive_series.cpu().detach().numpy(),\n",
-    "\t\t\t\"color\": \"tab:green\"\n",
-    "\t\t}\n",
-    "\t]\n",
+    "\tM_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th_ana, th_d_ana, J_h_inv, J_h_inv_trans)\n",
+    "\tA_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
     "\n",
-    "\tdatasets_u = [\n",
-    "\t\t{\n",
-    "\t\t\t\"name\": \"naive\",\n",
-    "\t\t\t\"values\": u_naive_series.cpu().detach().numpy(),\n",
-    "\t\t\t\"color\": \"tab:orange\"\n",
-    "\t\t}\n",
-    "\t]\n",
+    "\tu = torch.pinverse(A_th) @ ((Kp @ (th_des - th_ana).T + Kd @ (th_d_des - th_d_ana).T))\n",
+    "\tu = u + torch.pinverse(A_th) @ G_th\n",
     "\n",
-    "\t# Common labels for the plots.\n",
-    "\tname_q = \"q trajectory\"\n",
-    "\tname_th = \"th trajectory\"\n",
-    "\tname_xy = \"xy trajectory\"\n",
-    "\tt_series = torch.arange(0, t_end, dt)\n",
+    "\t\"\"\" Update the real system and apply latent control input. \"\"\"\n",
     "\n",
-    "\t# Create an instance of ErrorPlotter.\n",
-    "\tep = pendulum_plot.Error_plotter(rp)\n",
+    "\tM_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_ana.squeeze(0), q_d_ana.squeeze(0))\n",
+    "\tA_q_real = dynamics.input_matrix(rp, q_ana.squeeze(0))\n",
     "\n",
-    "\t# Prepare plot datasets for each column.\n",
-    "\t# Each call groups a set of datasets to be drawn in one subplot column.\n",
-    "\tcolumn1 = ep.create_plot_dataset(t=t_series, datasets=datasets_q, reference=q_des, name=name_q)\n",
-    "\tcolumn2 = ep.create_plot_dataset(t=t_series, datasets=datasets_th, reference=th_des, name=name_th)\n",
-    "\tcolumn3 = ep.create_plot_dataset(t=t_series, datasets=datasets_xy, reference=xy_des_real.unsqueeze(0), name=name_xy)\n",
-    "\tplot_datasets = [column1, column2, column3]\n",
+    "\ttau_q_real = A_q_real * u\n",
+    "\tq_dd_ana = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_ana).T)- G_q_real)).T  #  - C_damp @ ((q_d_real).T) \n",
+    "\tq_d_ana = q_d_ana + q_dd_ana * dt\n",
+    "\tq_ana = q_ana + q_d_ana * dt\n",
+    "\tq_ana = transforms.wrap_to_pi(q_ana)\n",
+    "\t\n",
+    "\tth_ana = model.encoder_vmap(q_ana)\n",
+    "\tth_d_ana = (model.jacobian_enc(q_ana) @ q_d_ana.T).T\n",
     "\n",
-    "\tprint(column1[\"x\"].size())\n",
     "\n",
-    "\tfile_name = \"Error plot naive \" + str(round(Kp_naive[0,0].item())) + \"_\" + str(round(Kd_naive[0,0].item())) + \".png\"\n",
-    "\tprint(file_name)\n",
-    "\tfile_counter = 0\n",
+    "\t\"\"\" Store data for plotting \"\"\"\n",
     "\n",
-    "\toutput_path = os.path.join(save_dir, file_name)\n",
+    "\tth_ana_series = torch.cat((th_ana_series, th_ana.detach()), dim=0)\n",
+    "\tth_d_ana_series = torch.cat((th_d_ana_series, th_d_ana.detach()), dim=0)\n",
+    "\t\n",
+    "\tq_ana_series = torch.cat((q_ana_series, q_ana.detach()), dim=0)\n",
+    "\tq_d_ana_series = torch.cat((q_d_ana_series, q_d_ana.detach()), dim=0)\n",
+    "\tq_dd_ana_series = torch.cat((q_dd_ana_series, q_dd_ana.detach()), dim=0)\n",
     "\n",
-    "\t# Pass the list of columns (plot_dataset objects) to plot_multi.\n",
-    "\tep.plot_multi(plot_datasets=plot_datasets, save_path=output_path, axes_names = [\"q\", \"th\", \"xy\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_dir = f\"collocated_results/sim_naive_b\"\n",
-    "for Kp_val in range(80, 90, 10):\n",
-    "\tfor Kd_val in range(90, 100, 10):\t\n",
-    "\t\tprint(\"Simulating. Kp =\", Kp_val, \", Kd =\", Kd_val)\n",
-    "\t\tKp_naive = torch.tensor([[Kp_val, 0.], [0., Kp_val]]).to(device)\n",
-    "\t\tKd_naive = torch.tensor([[Kd_val, 0.], [0., Kd_val]]).to(device)\n",
-    "\t\tseries_tuple, dt, t_end = sim_naive(Kp_naive, Kd_naive)\n",
-    "\t\tq_naive_series, q_d_naive_series, q_dd_naive_series, th_naive_series, th_d_naive_series, u_naive_series = series_tuple\n",
-    "\t\txy_naive_series = naive_to_xy(q_naive_series)\n",
-    "\t\tplot_naive(Kp_naive, Kd_naive, q_naive_series, th_naive_series, xy_naive_series, u_naive_series, dt, t_end)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# OPTIMAL GAINS FOR NAIVE CONTROLLER ARE Kp = 90, Kd = 90"
+    "\tu_ana_series = torch.cat((u_ana_series, u.detach()), dim=0)\n",
+    "\ttau_q_ana_series = torch.cat((tau_q_ana_series, tau_q_real.T.detach()), dim=0)\n",
+    "\n",
+    "\tprint(\"\")\n",
+    "\n",
+    "\t\n",
+    "\t\n"
    ]
   }
  ],
