Remove unnecessary nn checks

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -48,13 +48,7 @@
     "plotter = pendulum_plot.Anim_plotter(rp)\n",
     "neural_net = True\n",
     "\n",
-    "fix_q = True\n",
     "model_cw = False\n",
-    "model_shifting = True\n",
-    "\n",
-    "if fix_q and not neural_net:\n",
-    "\tfix_q = False\n",
-    "\tprint(\"Analytic transform used, so fix_q set to False. Did you check your inputs properly?\")\n",
     "\n",
     "if neural_net:\n",
     "\tmodel = autoencoders.Autoencoder_double(rp).to(device)\n",
@@ -62,7 +56,9 @@
     "\tmodel.load_state_dict(torch.load(model_location, weights_only=True))\n",
     "else:\n",
     "\tmodel_location = \"N/A\"\n",
-    "\tmodel = autoencoders.Analytic_transformer(rp)"
+    "\tmodel = autoencoders.Analytic_transformer(rp)\n",
+    "\n",
+    "model_ana = autoencoders.Analytic_transformer(rp)"
    ]
   },
   {
@@ -148,6 +144,20 @@
     "dt = 0.01\n",
     "t_end = 15\n",
     "t_series = torch.arange(0, t_end, dt)\n",
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NN simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sim_collocated_nn(xy_start, xy_des, timestamp):\n",
     "\n",
     "th = th_start\n",
     "th_d = th_d_start\n",
@@ -161,11 +171,6 @@
     "is_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
     "\n",
-    "if neural_net and fix_q:\n",
-    "\tnote_string = \"NOTE: The controller expects the NN to be trained on \" + (\"COUNTER\" if not model_cw else \"\") + \"CLOCKWISE data.\"\n",
-    "\tprint(note_string)\n",
-    "if model_shifting:\n",
-    "\tprint(\"NOTE: The controller expects points in q to be shifted (to make q-space unimodal).\")\n",
     "\n",
     "\n",
     "\n",
@@ -183,13 +188,6 @@
     "\t\tq = q_real\n",
     "\t\tq_d = q_d_real\n",
     "\n",
-    "\tif model_shifting:\n",
-    "\t\tq = transforms.shift_q(q, clockwise=model_cw)\n",
-    "\tth = model.encoder_vmap(q)\n",
-    "\tth_d = (model.jacobian_enc(q) @ q_d.T).T\n",
-    "\t\n",
-    "\tq = model.decoder_vmap(th, clockwise=model_cw)\n",
-    "\tq_d = (model.jacobian_dec(th) @ th_d.T).T\n",
     "\n",
     "\t\"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
     "\n",
