--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -95,36 +95,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "xy_start = torch.tensor([0., -2.]).requires_grad_().to(device)\n",
-    "q_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
-    "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
-    "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
-    "\n",
-    "is_clockwise_start = transforms.check_clockwise(q_start.squeeze(0))\n",
-    "\n",
-    "xy_des_real = torch.tensor([2., -2.]).requires_grad_().to(device)\n",
-    "q_des = transforms.inverse_kinematics(xy_des_real, rp, is_clockwise=model_cw).unsqueeze(0)\n",
-    "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
-    "\n",
-    "th_start = model.encoder_vmap(q_start)\n",
-    "th_d_start = (model.jacobian_enc(q_start) @ q_d_start.T).T\n",
-    "th_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Obtain accelerations in thetas. Do I care?\n",
-    "\n",
-    "is_clockwise_des = transforms.check_clockwise(q_des.squeeze(0))\n",
-    "\n",
-    "th_des = model.encoder_vmap(q_des)\n",
-    "th_d_des = (model.jacobian_enc(q_des) @ q_d_des.T).T\n",
-    "\n",
-    "q_des_est = model.decoder_vmap(th_des, is_clockwise_des)\n",
-    "q_d_des_est = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
-    "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])\n",
-    "\n",
-    "print(q_start)"
+    "#### Define desired conditions"
    ]
   },
   {
@@ -133,14 +107,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "def desired_conditions(xy_des):\n",
+    "\tq_des = transforms.inverse_kinematics(xy_des, rp, is_clockwise=model_cw).unsqueeze(0)\n",
+    "\tq_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
-    "th_series, th_d_series, th_dd_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "q_est_series, q_d_est_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "q_real_series, q_d_real_series, q_dd_real_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
-    "u_series = torch.empty((0,1)).to(device)\n",
+    "\tis_clockwise_des = transforms.check_clockwise(q_des.squeeze(0))\n",
     "\n",
+    "\tth_des_ana = model_ana.encoder_vmap(q_des)\n",
+    "\tth_d_des_ana = (model_ana.jacobian_enc(q_des) @ q_d_des.T).T\n",
     "\n",
+    "\tth_des_est = model.encoder_vmap(q_des)\n",
+    "\tth_d_des_est = (model.jacobian_enc(q_des) @ q_d_des.T).T\n",
+    "\n",
+    "\tq_des_est = model.decoder_vmap(th_des_est, is_clockwise_des)\n",
+    "\tq_d_des_est = (model.jacobian_dec(th_des_est, clockwise=is_clockwise_des) @ th_d_des_est.T).T\n",
+    "\txy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])\n",
+    "\n",
+    "\tprint(\"th_des_ana:\", th_des_ana.detach().cpu().numpy()[0])\n",
+    "\tprint(\"th_des_est:\", th_des_est.detach().cpu().numpy()[0])\n",
+    "\n",
+    "\treturn (q_des, q_d_des, is_clockwise_des, th_des_ana, th_d_des_ana, \n",
+    "\t\t \tth_des_est, th_d_des_est, q_des_est, q_d_des_est, xy_des_est)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define start conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start_conditions(xy_start):\n",
+    "\tq_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
+    "\tq_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
+    "\tq_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
+    "\n",
+    "\tis_clockwise_start = transforms.check_clockwise(q_start.squeeze(0))\n",
+    "\n",
+    "\tth_start_est = model.encoder_vmap(q_start)\n",
+    "\tth_d_start_est = (model.jacobian_enc(q_start) @ q_d_start.T).T\n",
+    "\n",
+    "\tth_start_ana = model_ana.encoder_vmap(q_start)\n",
+    "\tth_d_start_ana = (model_ana.jacobian_enc(q_start) @ q_d_start.T).T\n",
+    "\n",
+    "\tq_start_est = model.decoder_vmap(th_start_est, is_clockwise_start)\n",
+    "\tq_d_start_est = (model.jacobian_dec(th_start_est, clockwise=is_clockwise_start) @ th_d_start_est.T).T\n",
+    "\txy_start_est, _ = transforms.forward_kinematics(rp, q_start_est[0])\n",
+    "\n",
+    "\tprint(\"th_start_ana:\", th_start_ana.detach().cpu().numpy()[0])\n",
+    "\tprint(\"th_start_est:\", th_start_est.detach().cpu().numpy()[0])\n",
+    "\n",
+    "\treturn (q_start, q_d_start, q_dd_start, is_clockwise_start, th_start_est, th_d_start_est, \n",
+    "\t\t \tth_start_ana, th_d_start_ana, q_start_est, q_d_start_est, xy_start_est)"
+   ]
+  },
     "dt = 0.01\n",
     "t_end = 15\n",
     "t_series = torch.arange(0, t_end, dt)\n",
