--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "if neural_net:\n",
     "\tmodel = autoencoders.Autoencoder_double(rp).to(device)\n",
-    "\tmodel_location = '../Double_Pendulum/Learning/Models/NN_202505141642(half-q)/NN_202505141642_0.pth'\n",
+    "\tmodel_location = '../Double_Pendulum/Learning/Models/NN_optimal/NN_0.pth'\n",
     "\tmodel.load_state_dict(torch.load(model_location, weights_only=True))\n",
     "else:\n",
     "\tmodel_location = \"N/A\"\n",
@@ -167,9 +167,17 @@
     "\t\t \tth_start_ana, th_d_start_ana, q_start_est, q_d_start_est, xy_start_est)"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dt = 0.01\n",
     "t_end = 15\n",
-    "t_series = torch.arange(0, t_end, dt)\n",
+    "t_series = torch.arange(0, t_end, dt)"
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
