--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -193,20 +193,29 @@
    "source": [
     "def sim_collocated_nn(xy_start, xy_des, timestamp):\n",
     "\n",
-    "th = th_start\n",
-    "th_d = th_d_start\n",
-    "th_dd = th_dd_start\n",
+    "\t(q_des, q_d_des, is_clockwise_des, th_des_ana, th_d_des_ana, \n",
+    "\t\tth_des_est, th_d_des_est, q_des_est, q_d_des_est, xy_des_est) = desired_conditions(xy_des)\n",
     "\n",
-    "q_est = model.decoder(th_start, clockwise=is_clockwise_start)\n",
-    "q_d_est = (model.jacobian_dec(th_start, clockwise=is_clockwise_start) @ th_d_start.T).T\n",
-    "\n",
-    "q_real, q_d_real, q_dd_real = q_start, q_d_start, q_dd_start\n",
-    "\n",
-    "is_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
+    "\t(q_start, q_d_start, q_dd_start, is_clockwise_start, th_start_est, th_d_start_est, \n",
+    "\t\tth_start_ana, th_d_start_ana, q_start_est, q_d_start_est, xy_start_est) = start_conditions(xy_start)\n",
+    "\t\n",
     "\n",
     "\n",
+    "\tth_series, th_d_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "\tq_hat_series, q_d_hat_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "\tq_real_series, q_d_real_series, q_dd_real_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "\tu_series = torch.empty((0,1)).to(device)\n",
+    "\ttau_q_series = torch.empty((0,2)).to(device)\n",
     "\n",
+    "\tth = th_start_est\n",
+    "\tth_d = th_d_start_est\n",
     "\n",
+    "\tq_hat = q_start_est\n",
+    "\tq_d_hat = q_d_start_est\n",
+    "\n",
+    "\tq_real, q_d_real, q_dd_real = q_start, q_d_start, q_dd_start\n",
+    "\n",
+    "\tis_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
     "for t in torch.arange(0, t_end, dt):\n",
     "\tt_string = \"Time: [\" + str(t.item().__round__(3)) + \"/\" + str(t_end) + \".0]\"\n",
