--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -217,83 +217,93 @@
     "\n",
     "\tis_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
-    "for t in torch.arange(0, t_end, dt):\n",
-    "\tt_string = \"Time: [\" + str(t.item().__round__(3)) + \"/\" + str(t_end) + \".0]\"\n",
-    "\tprint(t_string)\n",
+    "\n",
+    "\tfor t in torch.arange(0, t_end, dt):\n",
+    "\t\tt_string = \"Time: [\" + str(t.item().__round__(3)) + \"/\" + str(t_end) + \".0]\"\n",
+    "\t\tif torch.allclose(t, torch.floor(t)) and torch.floor(t)%5 == 0:\n",
+    "\t\t\tprint(t_string)\n",
+    "\n",
+    "\t\tis_clockwise = transforms.check_clockwise(q_real.squeeze(0))\n",
+    "\t\tif model_cw != is_clockwise:\n",
+    "\t\t\tprint(\"fixing value to\", \"clockwise\" if model_cw else \"counterclockwise\")\n",
+    "\t\t\tq = transforms.flip_q(rp, q_real.squeeze(0), model_cw).unsqueeze(0)\n",
+    "\t\t\tq_d = transforms.flip_q_d(rp, q_real.squeeze(0), q_d_real, model_cw)\n",
+    "\t\telse:\n",
+    "\t\t\tq = q_real\n",
+    "\t\t\tq_d = q_d_real\n",
+    "\n",
+    "\t\tth = model.encoder_vmap(q)\n",
+    "\t\tth_d = (model.jacobian_enc(q) @ q_d.T).T\n",
+    "\t\t\n",
+    "\t\tq_hat = model.decoder_vmap(th, clockwise=model_cw)\n",
+    "\t\tq_d_hat = (model.jacobian_dec(th) @ th_d.T).T\n",
+    "\n",
+    "\t\tis_clockwise = transforms.check_clockwise(q_hat.squeeze(0))\n",
+    "\n",
+    "\t\t\"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
+    "\t\t\n",
+    "\t\tJ_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
+    "\t\tJ_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
+    "\n",
+    "\t\tM_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q_hat.squeeze(0), q_d_hat.squeeze(0))\n",
+    "\t\tA_q_est = dynamics.input_matrix(rp, q_hat.squeeze(0))\n",
     "\n",
     "\n",
-    "\tis_clockwise = transforms.check_clockwise(q_real.squeeze(0))\n",
-    "\tif fix_q and model_cw != is_clockwise:\n",
-    "\t\tprint(\"fixing value to\", \"clockwise\" if model_cw else \"counterclockwise\")\n",
-    "\t\tq = transforms.flip_q(rp, q_real.squeeze(0), model_cw).unsqueeze(0)\n",
-    "\t\tq_d = transforms.flip_q_d(rp, q_real.squeeze(0), q_d_real, model_cw)\n",
-    "\telse:\n",
-    "\t\tq = q_real\n",
-    "\t\tq_d = q_d_real\n",
+    "\t\t\"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
+    "\n",
+    "\t\tM_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
+    "\t\tA_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
+    "\n",
+    "\t\tu = torch.pinverse(A_th) @ ((Kp @ (th_des_est - th).T + Kd @ (th_d_des_est - th_d).T))\n",
+    "\t\tu = u + torch.pinverse(A_th) @ G_th\n",
+    "\n",
+    "\t\t\"\"\" Update the real system and apply latent control input. \"\"\"\n",
+    "\n",
+    "\t\tM_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_real.squeeze(0), q_d_real.squeeze(0))\n",
+    "\t\tA_q_real = dynamics.input_matrix(rp, q_real.squeeze(0))\n",
+    "\n",
+    "\t\ttau_q_real = A_q_real * u\n",
+    "\t\tq_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T)- G_q_real)).T\n",
+    "\t\tq_d_real = q_d_real + q_dd_real * dt\n",
+    "\t\tq_real = q_real + q_d_real * dt\n",
+    "\t\tq_real = transforms.wrap_to_pi(q_real)\n",
+    "\t\t\n",
+    "\t\tth = model.encoder_vmap(q_real)\n",
+    "\t\tq_hat = model.decoder_vmap(th, clockwise=transforms.check_clockwise(q_real.squeeze(0)))\n",
+    "\t\tq_hat = transforms.wrap_to_pi(q_hat)\n",
+    "\t\tth_d = (model.jacobian_enc(q_real) @ q_d_real.T).T\n",
+    "\t\tq_d_hat = (model.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
     "\n",
     "\n",
-    "\t\"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
+    "\t\t\"\"\" Store data for plotting \"\"\"\n",
     "\n",
-    "\tJ_h = model.jacobian_enc(q)\n",
-    "\tJ_h_trans = torch.transpose(J_h, 0, 1)\n",
-    "\tis_clockwise = transforms.check_clockwise(q.squeeze(0))\n",
-    "\t\n",
-    "\tJ_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
-    "\tJ_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
+    "\t\tth_series = torch.cat((th_series, th.detach()), dim=0)\n",
+    "\t\tth_d_series = torch.cat((th_d_series, th_d.detach()), dim=0)\n",
+    "\t\t\n",
+    "\t\tq_real_series = torch.cat((q_real_series, q_real.detach()), dim=0)\n",
+    "\t\tq_d_real_series = torch.cat((q_d_real_series, q_d_real.detach()), dim=0)\n",
+    "\t\tq_dd_real_series = torch.cat((q_dd_real_series, q_dd_real.detach()), dim=0)\n",
     "\n",
-    "\tM_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
-    "\tA_q_est = dynamics.input_matrix(rp, q.squeeze(0))\n",
+    "\t\tq_hat_series = torch.cat((q_hat_series, q_hat.detach()), dim=0)\n",
+    "\t\tq_d_hat_series = torch.cat((q_d_hat_series, q_d_hat.detach()), dim=0)\n",
     "\n",
+    "\t\tu_series = torch.cat((u_series, u.detach()), dim=0)\n",
+    "\t\ttau_q_series = torch.cat((tau_q_series, tau_q_real.T.detach()), dim=0)\n",
     "\n",
-    "\t\"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
+    "\txy_real_series = torch.empty(q_real_series.size()).to(device)\n",
+    "\txy_hat_series = torch.empty(q_real_series.size()).to(device)\n",
+    "\ttheta_real_series = torch.empty((q_real_series.size())).to(device)\n",
     "\n",
-    "\tM_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
-    "\tA_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans)\n",
+    "\tfor i, (q_real, q_hat) in enumerate(zip(q_real_series, q_hat_series)):\n",
+    "\t\txy_real, _ = transforms.forward_kinematics(rp, q_real)\n",
+    "\t\txy_real_series[i] = xy_real.unsqueeze(0)\n",
+    "\t\txy_hat, _ = transforms.forward_kinematics(rp, q_hat)\n",
+    "\t\txy_hat_series[i] = xy_hat.unsqueeze(0)\n",
+    "\t\ttheta_real = transforms.analytic_theta(rp, q_real)\n",
+    "\t\ttheta_real_series[i] = theta_real\n",
     "\n",
-    "\tu = torch.pinverse(A_th) @ ((Kp @ (th_des - th).T + Kd @ (th_d_des - th_d).T))\n",
-    "\tu = u + torch.pinverse(A_th) @ G_th\n",
-    "\n",
-    "\t\"\"\" Update the real system and apply latent control input. \"\"\"\n",
-    "\n",
-    "\tM_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_real.squeeze(0), q_d_real.squeeze(0))\n",
-    "\tA_q_real = dynamics.input_matrix(rp, q_real.squeeze(0))\n",
-    "\n",
-    "\ttau_q_real = A_q_real * u\n",
-    "\tq_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T)- G_q_real)).T  #  - C_damp @ ((q_d_real).T) \n",
-    "\tq_d_real = q_d_real + q_dd_real * dt\n",
-    "\tq_real = q_real + q_d_real * dt\n",
-    "\tq_real = transforms.wrap_to_pi(q_real)\n",
-    "\t\n",
-    "\t\n",
-    "\tq_real_shifted = transforms.shift_q(q_real, clockwise=model_cw)\n",
-    "\tth = model.encoder_vmap(q_real_shifted)\n",
-    "\t#print(q_real)\n",
-    "\tq_est = model.decoder_vmap(th, clockwise=transforms.check_clockwise(q_real.squeeze(0)))\n",
-    "\tq_est = transforms.wrap_to_pi(q_est)\n",
-    "\tth_d = (model.jacobian_enc(q_real) @ q_d_real.T).T\n",
-    "\tq_d_est = (model.jacobian_dec(th, clockwise=is_clockwise) @ th_d.T).T\n",
-    "\n",
-    "\n",
-    "\t\"\"\" Store data for plotting \"\"\"\n",
-    "\n",
-    "\tth_series = torch.cat((th_series, th.detach()), dim=0)\n",
-    "\tth_d_series = torch.cat((th_d_series, th_d.detach()), dim=0)\n",
-    "\tth_dd_series = torch.cat((th_dd_series, th_dd.detach()), dim=0)\n",
-    "\t\n",
-    "\tq_real_series = torch.cat((q_real_series, q_real.detach()), dim=0)\n",
-    "\tq_d_real_series = torch.cat((q_d_real_series, q_d_real.detach()), dim=0)\n",
-    "\tq_dd_real_series = torch.cat((q_dd_real_series, q_dd_real.detach()), dim=0)\n",
-    "\n",
-    "\tq_est_series = torch.cat((q_est_series, q_est.detach()), dim=0)\n",
-    "\tq_d_est_series = torch.cat((q_d_est_series, q_d_est.detach()), dim=0)\n",
-    "\n",
-    "\tu_series = torch.cat((u_series, u.detach()), dim=0)\n",
-    "\n",
-    "\t#print(is_clockwise)\n",
-    "\tprint(\"\")\n",
-    "\n",
-    "\t\n",
-    "\t\n"
+    "\treturn ((th_series, th_d_series, q_real_series, q_d_real_series, q_dd_real_series, q_hat_series,\n",
+    "\t\t\tq_d_hat_series, u_series, tau_q_series, xy_real_series, xy_hat_series, theta_real_series), th_des_ana, th_start_ana)"
    ]
   },
   {
@@ -302,15 +312,109 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xy_real_series = torch.empty((0,2)).to(device)\n",
-    "xy_est_series = torch.empty((0,2)).to(device)\n",
+    "n_sims = 2\n",
     "\n",
-    "#for q_real, q_est, q_naive in zip(q_real_series, q_est_series, q_naive_series):\n",
-    "for q_real, q_est in zip(q_real_series, q_est_series):\n",
-    "\txy_real, _ = transforms.forward_kinematics(rp, q_real)\n",
-    "\txy_real_series = torch.cat((xy_real_series, xy_real.unsqueeze(0)))\n",
-    "\txy_est, _ = transforms.forward_kinematics(rp, q_est)\n",
-    "\txy_est_series = torch.cat((xy_est_series, xy_est.unsqueeze(0)))"
+    "settling_time_thsims = torch.empty(n_sims).to(device)\n",
+    "rmse_thsims = torch.empty(n_sims).to(device)\n",
+    "work_thsims = torch.empty(n_sims).to(device)\n",
+    "\n",
+    "for i in range(n_sims):\n",
+    "\n",
+    "\ttimestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "\txy_des = torch.tensor([2., -2.]).requires_grad_().to(device)\n",
+    "\txy_start = torch.tensor([0., -4.]).requires_grad_().to(device)\n",
+    "\t\n",
+    "\t((th_series, th_d_series, q_real_series, q_d_real_series, q_dd_real_series, q_hat_series,\n",
+    "\t\t\tq_d_hat_series, u_series, tau_q_series, xy_real_series, xy_hat_series, theta_real_series),\n",
+    "\t\t\tth_des_ana, th_start_ana) = sim_collocated_nn(xy_start, xy_des, timestamp)\n",
+    "\t\n",
+    "\t\n",
+    "\n",
+    "\tth_distance = torch.abs(th_des_ana[0,0] - th_start_ana[0,0])\n",
+    "\tsettling_time_threshold = 0.05\n",
+    "\ttolerance = settling_time_threshold * th_distance\n",
+    "\n",
+    "\tprint(\"Tolerance distance from th_des:\", round(tolerance.item(), 5), \"[m]\")\n",
+    "\n",
+    "\tth_0_abs_error_series = torch.abs(theta_real_series[:, 0] - th_des_ana[0, 0])\n",
+    "\n",
+    "\twithin_tolerance = th_0_abs_error_series <= tolerance\n",
+    "\tfirst_match_idx = torch.nonzero(within_tolerance).squeeze()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\tif first_match_idx.numel() > 0:\n",
+    "\t\tfirst_time_idx = first_match_idx[0].item()\n",
+    "\t\ttime_to_reach = first_time_idx * dt\n",
+    "\t\tsettled_theta = theta_real_series[3*first_time_idx:, 0]\n",
+    "\t\trmse = torch.sqrt(torch.mean((settled_theta - th_des_ana[0, 0]) ** 2))\n",
+    "\t\tprint(f\"Reached within 5% tolerance at t = {time_to_reach:.2f} seconds.\")\n",
+    "\t\tprint(f\"RMSE after 3x settling time: {rmse.item():.6f} [m]\")\n",
+    "\telse:\n",
+    "\t\tprint(\"Did not reach within 5% tolerance.\")\n",
+    "\t\ttime_to_reach = torch.inf\n",
+    "\t\trmse = torch.inf\n",
+    "\n",
+    "\n",
+    "\tjoint_power_series = tau_q_series * q_d_real_series\n",
+    "\tpower_series = torch.sum(joint_power_series, dim = 1)\n",
+    "\ttotal_work = torch.sum(power_series)\n",
+    "\n",
+    "\tsettling_time_thsims[i] = time_to_reach\n",
+    "\trmse_thsims[i] = rmse\n",
+    "\twork_thsims[i] = total_work\n",
+    "\n",
+    "\t\n",
+    "\n",
+    "\t# Time vector (same length as error series)\n",
+    "\tt_series = torch.arange(0, t_end, dt)\n",
+    "\n",
+    "\t# Detach if needed (for plotting outside torch computation graph)\n",
+    "\terror_np = th_0_abs_error_series.detach().cpu().numpy()\n",
+    "\tt_np = t_series.cpu().numpy()\n",
+    "\n",
+    "\t# Plot\n",
+    "\tplt.figure(figsize=(4, 3))\n",
+    "\tplt.plot(t_np, error_np, label=r\"$|θ_{0} - θ_{0_{des}}|$\", color='tab:blue')\n",
+    "\tplt.axhline(y=tolerance.item(), color='tab:red', linestyle='--', label=\"5% Tolerance\")\n",
+    "\tplt.axvline(x=time_to_reach, color='tab:green', linestyle='--', label=\"Settling Time\")\n",
+    "\n",
+    "\tplt.title(\"Absolute Error of \" + r\"$θ_0$\" + \" vs Time\")\n",
+    "\tplt.xlabel(\"Time [s]\")\n",
+    "\tplt.ylabel(\"Absolute Error [m]\")\n",
+    "\tplt.xlim(0, t_end)\n",
+    "\tplt.legend()\n",
+    "\tplt.grid(True)\n",
+    "\tplt.tight_layout()\n",
+    "\tplt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(settling_time_thsims)\n",
+    "print(rmse_thsims)\n",
+    "print(work_thsims)\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.set_ylabel('Settling time [s]')\n",
+    "\n",
+    "boxdata = [settling_time_thsims.cpu(), rmse_thsims.cpu().detach()]\n",
+    "colors = [\"tab:orange\", \"tab:blue\"]\n",
+    "labels = [\"hi\", \"ho\"]\n",
+    "\n",
+    "bplot = ax.boxplot(boxdata,\n",
+    "                   patch_artist=True,  # fill with color\n",
+    "                   tick_labels=labels)  # will be used to label x-ticks\n",
+    "\n",
+    "# fill with colors\n",
+    "for patch, color in zip(bplot['boxes'], colors):\n",
+    "    patch.set_facecolor(color)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -327,8 +431,7 @@
     "\t\"timestamp\": timestamp,\n",
     "\t\"Learned transform\": neural_net,\n",
     "\t\"Model location\": model_location,\n",
-    "\t\"Model clockwise\": model_cw,\n",
-    "\t\"Model shifting\": model_shifting, \n",
+    "\t\"Model clockwise\": model_cw, \n",
     "\t\"PD gains\": {\n",
     "\t\t\"Kp\": [[Kp[0,0].item(), Kp[0,1].item()], \n",
     "\t\t\t   [Kp[1,0].item(), Kp[1,1].item()]],  \n",
@@ -391,7 +494,7 @@
     "\"\"\"\n",
     "\n",
     "ref_pos_real = {\n",
-    "\t\"pos\": xy_des_real,\n",
+    "\t\"pos\": xy_des,\n",
     "\t\"name\": \"real\",\n",
     "\t\"color\": \"tab:blue\"\n",
     "}\n",
@@ -404,7 +507,7 @@
     "\n",
     "\"\"\"\n",
     "ref_pos_naive = {\n",
-    "\t\"pos\": xy_des_real,\n",
+    "\t\"pos\": xy_des,\n",
     "\t\"name\": \"naive\",\n",
     "\t\"color\": \"tab:green\"\n",
     "}\n",
@@ -417,7 +520,7 @@
     "#frames_data = [data_real]\n",
     "\n",
     "name_rp = \"RP:(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
-    "name_ref = \"ref:(\" + str(xy_des_real[0].item()) + \",\" + str(xy_des_real[1].item()) + \")_\"\n",
+    "name_ref = \"ref:(\" + str(xy_des[0].item()) + \",\" + str(xy_des[1].item()) + \")_\"\n",
     "\n",
     "if neural_net:\n",
     "\tmodel_type = \"NN\"\n",
@@ -506,7 +609,7 @@
     "# Each call groups a set of datasets to be drawn in one subplot column.\n",
     "column1 = ep.create_plot_dataset(t=t_series, datasets=datasets_q, reference=q_des, name=name_q)\n",
     "column2 = ep.create_plot_dataset(t=t_series, datasets=datasets_th, reference=th_des, name=name_th)\n",
-    "column3 = ep.create_plot_dataset(t=t_series, datasets=datasets_xy, reference=xy_des_real.unsqueeze(0), name=name_xy)\n",
+    "column3 = ep.create_plot_dataset(t=t_series, datasets=datasets_xy, reference=xy_des.unsqueeze(0), name=name_xy)\n",
     "plot_datasets = [column1, column2, column3]\n",
     "\n",
     "file_name = \"Error plot.png\"\n",
